fix width on mobile

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
     height: 100dvh;
     padding: 0;
     margin: 0;
@@ -17,7 +16,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 50%;
+    width: 90%;
 }
 li {
     font-size: 1.13rem;
